[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/level/Interactable/BaseInteractable.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/textures/objects/torch.png" type="Texture" id=2]
[ext_resource path="res://scripts/level/Interactable/InteractableTorch.gd" type="Script" id=3]
[ext_resource path="res://scenes/level/LightSources/InteractiveLightSource.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/textures/player/light-source-base.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19, 35 )

[node name="InteractableTorch" instance=ExtResource( 1 )]
script = ExtResource( 3 )
is_enabled = false

[node name="Sprite" parent="." index="0"]
position = Vector2( 2, 0 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 1 )

[node name="InteractiveLightSource" parent="." index="2" instance=ExtResource( 4 )]
visible = false
texture_scale = 4.0
min_radius = 0.0
is_enabled = false
radius = 1.8

[node name="EditorLight" type="Light2D" parent="." index="3"]
visible = false
texture = ExtResource( 5 )
texture_scale = 1.8

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="." index="4"]
